--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
         <nav>
             <ul class="nav-list list">
                 <li><a href="./index.html" class="nav-link link">Студія</a></li>
-                <li><a href="./portfolio.html" class="nav-link link">Портфоліо</a></li>
+                <li><a href="./portfolio.html" class="nav-link link current-page">Портфоліо</a></li>
                 <li><a href="#" class="nav-link link">Контакти</a></li>
             </ul>
         </nav>
@@ -29,66 +29,66 @@
     <main>
         <section>
             <h2 hidden>Наші роботи</h2>
-            <ul>
-                <li><button type="button">Усі</button></li>
-                <li><button type="button">Веб-сайти</button></li>
-                <li><button type="button">Додатки</button></li>
-                <li><button type="button">Дизайн</button></li>
-                <li><button type="button">Маркетинг</button></li>
+            <ul class="list">
+                <li><button type="button" class="portfolio-btn">Усі</button></li>
+                <li><button type="button" class="portfolio-btn">Веб-сайти</button></li>
+                <li><button type="button" class="portfolio-btn">Додатки</button></li>
+                <li><button type="button" class="portfolio-btn">Дизайн</button></li>
+                <li><button type="button" class="portfolio-btn">Маркетинг</button></li>
             </ul>
-            <ul>
-                <li><a href="">
+            <ul class="portfolio-list list">
+                <li class="portfolio-list-item"><a href="" class="link">
                     <img src="./images/works-img-1.jpg" alt="Веб-сайт Технокряк" width="370" height="294">
-                    <h2>Технокряк</h2>
-                    <p>Веб-сайт</p>
+                    <h2 class="portfolio-subtitle">Технокряк</h2>
+                    <p class="portfolio-description">Веб-сайт</p>
                     </a>    
                 </li>
-                <li><a href="">
+                <li class="portfolio-list-item"><a href="" class="link">
                     <img src="./images/works-img-2.jpg" alt="Постер з баскетболістами" width="370" height="294">
-                     <h2>Постер <span lang="en">Orlean vs Golden Star</span></h2>
-                    <p>Дизайн</p>
+                     <h2 class="portfolio-subtitle">Постер <span lang="en">Orlean vs Golden Star</span></h2>
+                    <p class="portfolio-description">Дизайн</p>
                     </a>
                 </li>
-                <li><a href="">
+                <li class="portfolio-list-item"><a href="" class="link">
                         <img src="./images/works-img-3.jpg" alt="Логотип ресторану Сіфуд" width="370" height="294">
-                        <h2>Ресторан <span lang="en">Seafood</span></h2>
-                        <p>Додаток</p>
+                        <h2 class="portfolio-subtitle">Ресторан <span lang="en">Seafood</span></h2>
+                        <p class="portfolio-description">Додаток</p>
                     </a>
                 </li>
-                <li><a href="">
+                <li class="portfolio-list-item"><a href="" class="link">
                         <img src="./images/works-img-4.jpg" alt="Чорні навушники" width="370" height="294">
-                        <h2>Проєкт <span lang="en">Prime</span></h2>
-                        <p>Маркетинг</p>
+                        <h2 class="portfolio-subtitle">Проєкт <span lang="en">Prime</span></h2>
+                        <p class="portfolio-description">Маркетинг</p>
                     </a>
                 </li>
-                <li><a href="">
+                <li class="portfolio-list-item"><a href="" class="link">
                         <img src="./images/works-img-5.jpg" alt="Дві коробки" width="370" height="294">
-                        <h2>Проєкт <span lang="en">Boxes</span></h2>
-                        <p>Додаток</p>
+                        <h2 class="portfolio-subtitle">Проєкт <span lang="en">Boxes</span></h2>
+                        <p class="portfolio-description">Додаток</p>
                     </a>
                 </li>
-                <li><a href="">
+                <li class="portfolio-list-item"><a href="" class="link">
                         <img src="./images/works-img-6.jpg" alt="Монітор" width="370" height="294">
-                        <h2 lang="en">Inspiration has no Borders</h2>
-                        <p>Веб-сайт</p>
+                        <h2 class="portfolio-subtitle" lang="en">Inspiration has no Borders</h2>
+                        <p class="portfolio-description">Веб-сайт</p>
                     </a>
                 </li>
-                <li><a href="">
+                <li class="portfolio-list-item"><a href="" class="link">
                         <img src="./images/works-img-7.jpg" alt="Журнал" width="370" height="294">
-                        <h2>Видання <span lang="en">Limited Edition</span></h2>
-                        <p>Дизайн</p>
+                        <h2 class="portfolio-subtitle">Видання <span lang="en">Limited Edition</span></h2>
+                        <p class="portfolio-description">Дизайн</p>
                     </a>
                 </li>
-                <li><a href="">
+                <li class="portfolio-list-item"><a href="" class="link">
                         <img src="./images/works-img-8.jpg" alt="Етикетка" width="370" height="294">
-                        <h2>Проєкт <span lang="en">LAB</span></h2>
-                        <p>Маркетинг</p>
+                        <h2 class="portfolio-subtitle">Проєкт <span lang="en">LAB</span></h2>
+                        <p class="portfolio-description">Маркетинг</p>
                     </a>
                 </li>
-                <li><a href="">
+                <li class="portfolio-list-item"><a href="" class="link">
                         <img src="./images/works-img-9.jpg" alt="Людина друкує на ноутбуці" width="370" height="294">
-                        <h2 lang="en">Growing Business</h2>
-                        <p>Додаток</p>
+                        <h2 class="portfolio-subtitle" lang="en">Growing Business</h2>
+                        <p class="portfolio-description">Додаток</p>
                     </a>
                 </li>
             </ul>  
