--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <a href="./index.html" class="logo link"><span class="logo-accent">Web</span>Studio</a>
         <nav>
             <ul class="nav-list list">
-                <li><a href="./index.html" class="nav-link link">Студія</a></li>
+                <li><a href="./index.html" class="nav-link link current-page">Студія</a></li>
                 <li><a href="./portfolio.html" class="nav-link link">Портфоліо</a></li>
                 <li><a href="#" class="nav-link link">Контакти</a></li>
             </ul>
